# 42_call_me_maybe

./: Makefile  pyproject.toml
src/: cli.py  functions_parser.py  llm_function.py  output.py  parser.py
tests/generation/: conftest.py  test_function_choosing.py  test_getting_parameters.py
tests/input/: test_functions_parser.py  test_prompt_parser.py
tests/llm_sdk/: hugging_face_test.py  llm_sdk_test.py
tests/output/: test_output.py
